--- a/IM-FRONTEND/package.json
+++ b/IM-FRONTEND/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.8.0",
     "axios": "^0.27.2",
     "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "mediasoup-client": "^3.8.1",
     "moment": "^2.30.1",
