--- a/IM-FRONTEND/package.json
+++ b/IM-FRONTEND/package.json
@@ -62,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.15",
     "@types/randomcolor": "^0.5.9",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
