--- a/IM-BACKEND/tsconfig.json
+++ b/IM-BACKEND/tsconfig.json
@@ -50,9 +50,8 @@
     "baseUrl": "./src" /* Base directory to resolve non-absolute module names. */,
     "paths": {
       "@config/*": ["config/*"],
-      "@services/*": ["services/*"],
       "@socket/*": ["socket/*"],
-      "@utils/*": ["utils/*"],
+      "@loaders/*": ["loaders/*"],
       "@customTypes/*": ["types/*"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
